# WoodPixel

./: CMakeLists.txt  README.md
documentation/: OpenCLWrappersDoc.Doxyfile
lib/: CMakeLists.txt  feature_evaluator.cpp  gabor_filter_bank.cpp  gabor_filter_bank.hpp  idgen.hpp  matching_policies.cpp  matching_policies.hpp  ocl_patch_matcher.cpp  ocl_patch_matcher.hpp  ocl_template_matcher.hpp  texture.cpp  texture.hpp  tree_match_gpu.cpp  tree_match_gpu.hpp
lib/documentation/: gpu_template_matching.doxyfile
lib/kernels/: cl_kernel.hpp.in  erode.cl  erode_local.cl  erode_masked.cl  erode_masked_local.cl  find_min.cl  sqdiff_constant.cl  sqdiff_constant_kernel.cl  sqdiff_constant_local.cl  sqdiff_constant_local_masked.cl  sqdiff_naive.cl  sqdiff_naive_local.cl
lib/kernels/mad24/: erode.cl  erode_local.cl  erode_masked.cl  erode_masked_local.cl  find_min.cl  sqdiff_constant.cl  sqdiff_constant_local.cl  sqdiff_constant_local_masked.cl  sqdiff_naive.cl
simple_cl/: CMakeLists.txt
simple_cl/include/: simple_cl.hpp  simple_cl_error.hpp
simple_cl/src/: simple_cl.cpp
tools/: CMakeLists.txt
tools/export_for_fab/: CMakeLists.txt
tools/fit_patches/: CMakeLists.txt  fit_patches.cpp
tools/generate_training_data/: CMakeLists.txt
tools/merge_patches/: CMakeLists.txt
tools/morph_grid/: CMakeLists.txt
tools/opencl_matching_test/: CMakeLists.txt  cl_kernels.hpp  matching_policies.cpp  matching_policies.hpp  ocl_error.cpp  ocl_error.hpp  ocl_instance.cpp  ocl_instance.hpp  ocl_template_matcher.cpp  ocl_template_matcher.hpp  ocl_wrappers.cpp  ocl_wrappers.hpp  opencl_matching_test.cpp
tools/opencl_matching_test/kernels/: cl_kernel.hpp.in  sqdiff_constant_kernel.cl  sqdiff_naive.cl
tools/patches_from_edges/: CMakeLists.txt
tools/patches_from_segmentation/: CMakeLists.txt
tools/render_grid/: CMakeLists.txt
tools/render_saliency_map/: CMakeLists.txt
tools/render_segmentation_target/: CMakeLists.txt
tools/render_target/: CMakeLists.txt
wpperfdata/perf/: trlib_matching_performance_data_cpu_1T.csv  trlib_matching_performance_data_gpu_constant_buffer.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode_local_source.csv  trlib_matching_performance_data_gpu_no_batching.csv  trlib_matching_performance_data_gpu_no_opt.csv
wpperfdata/perf/cpu/: trlib_matching_performance_data_cpu_16T.csv
wpperfdata/perf/gpu/: trlib_matching_performance_data_gpu_constant_buffer.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode_local_source.csv  trlib_matching_performance_data_gpu_no_opt.csv  trlib_matching_performance_data_gpu_rot_batching.csv
wpperfdata/perf/gpu_mad24/: trlib_matching_performance_data_gpu_constant_buffer.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode.csv  trlib_matching_performance_data_gpu_constant_buffer_local_erode_local_source.csv  trlib_matching_performance_data_gpu_no_opt.csv  trlib_matching_performance_data_gpu_rot_batching.csv
